--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,6 +40,7 @@
     "react-toastify": "^10.0.5",
     "swiper": "^11.2.1",
     "tailwindcss": "^3.4.10",
+    "xlsx": "^0.18.5",
     "yup": "^1.4.0"
   },
   "devDependencies": {
