--- a/authservice/src/main/resources/application.properties
+++ b/authservice/src/main/resources/application.properties
@@ -17,6 +17,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 server.port=4000
 server.servlet.context-path=/api
 frontend.url=${FRONTEND_URL:http://localhost:5173}
+leave.service.url=${LEAVE_URL:http://localhost:3000}
 
 # Google OAuth2 Settings
 spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID}
