--- a/authservice/Dockerfile
+++ b/authservice/Dockerfile
@@ -9,6 +9,7 @@ ENV DB_PASSWORD=BKk9xDeaoXjnUZlr
 ENV JWT_SECRET=DUIFNBVDFOV548N04V8VN043V5I845N80N485048N5V90485NV04N5
 ENV GOOGLE_CLIENT_ID=1047104665535-v37vqapk98318nlf31clfokb1jeikld9.apps.googleusercontent.com
 ENV FRONTEND_URL=http://localhost:5173
+ENV LEAVE_URL=http://localhost:3000/api
 ENV SPRING_PROFILES_ACTIVE=dev
 
 # Copy pom.xml and download dependencies
